--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </head>
 <body>
   <header>
-    Apartment Building 140 Ridgeway Ave, Southport QLD 4215
+    21 Duporth Avenue, Maroochydore QLD 4558
   </header>
   <div class="container">
     <h1>Cleaner Guidance Center</h1>
