--- a/booking-details.html
+++ b/booking-details.html
@@ -305,7 +305,7 @@
 </head>
 <body>
   <header>
-    Apartment Building 21 Duporth Avenue, Maroochydore QLD 4558
+    21 Duporth Avenue, Maroochydore QLD 4558
   </header>
   <div class="container">
     <a href="index.html" class="back-btn">Back to Home</a>
