--- a/booking-details.html
+++ b/booking-details.html
@@ -351,7 +351,7 @@
 
       <div class="booking-item">
         <div class="field-title">Cleaning Dates</div>
-        <div class="field-details">Starting 27/03/2025</div>
+        <div class="field-details">Starting 07/04/2025</div>
       </div>
 
       <div class="booking-item">
@@ -361,7 +361,7 @@
 
       <div class="booking-item">
         <div class="field-title">Number of Cleaners</div>
-        <div class="field-details">to be assigned</div>
+        <div class="field-details">2</div>
       </div>
 
       <div class="booking-item">
